
2.9 (release planned for 2015-03-30)

-English:
    -Added many new style rules contributed by Heikki Lehvaslaiho. As these
     may cause false alarms, they are not activated by default. You can
     activate them by turning on all rules in the new 'Plain English' category.

-Esperanto:
    -added a few new rules

-Italian:
    -improved a few rules

-German:
    -added a few new rules

-Polish:
    -added a few new rules

-Portuguese:
    -added/improved several rules
    -added many dozens of compound words

-Russian:
    -added and improved rules

-Bitext rules:
    -added a simple rule for checking whether translations end with the same punctuation
     mark as the original (this includes only .?! characters).

-Spelling:
    -The new files at <languageCode>/hunspell/spelling.txt can be used to add
     accepted words to the spell checker that are also considered when creating
     suggestions for misspelled words.
     This is similar to the <languageCode>/hunspell/ignore.txt files, which list
     accepted words which are *not* used when creating suggestions for
     misspelled words.

-API:
    -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
    -Removed (Default)ResourceDataBroker.setResourceDir() and setRulesDir()
     as these can be set with the constructor
    -Cleaned up up class Contributor, e.g. removing getRemark()
    -Category.setDefaultOff() has been removed, this can be set via constructor now
    -Other small API cleanups that shouldn't affect the common use cases

-Embedded server:
    -XML escaping has been fixed, this could cause invalid XML documents
     to be returned

-Rule syntax:
    -A rule may now have a single example sentence as long as it has a 'correction'
     attribute - this can save some redundancy if the only correct sentence is the
     same as the incorrect sentence with the correction applied. Before, a rule
     needed at least two example sentences.